[project]
version = "0.8.2"
name = "pyddd"
description = "Domain-Driven Design for Python"
readme = "readme.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=1.10.4,<3.0.0",
]
license = "MIT"

[project.optional-dependencies]
transport-redis = [
    "redis>=3.5.0",
]
tenacity-retry = [
    "tenacity>=9.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.5",
    "flake8>=7.1.2",
    "pytest-asyncio>=0.25.3",
    "mypy>=1.15.0",
    "redis>=3.5.0",
    "tenacity>=9.0.0",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "src/pyddd",
]


[tool.mypy]
no_implicit_optional = false


[[tool.uv.index]]
name = "gitlab-pypi"
url = "https://git.nctresource.team/api/v4/projects/368/packages/pypi/simple"
publish-url = "https://git.nctresource.team/api/v4/projects/368/packages/pypi/simple"
explicit = true


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "function"
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["src/pyddd"]
