[project]
version = "0.21.4"
name = "pyddd"
description = "Domain-Driven Design for Python"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=1.10.4,<3.0.0",
]
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
keywords=[
    "ddd",
    "ddd python",
    "domain driven design",
    "domain-driven design",
    "event driven",
    "cqrs",
    "cqs",
]

[project.urls]
Homepage = "https://github.com/vmorugin/pyddd"
Issues = "https://github.com/vmorugin/pyddd/issues"

[project.optional-dependencies]
transport-redis = [
    "redis>=3.5.0",
]
tenacity-retry = [
    "tenacity>=9.0.0",
]
backoff-retry = [
    "backoff>=2.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "mypy>=1.15.0",
    "redis>=3.5.0",
    "tenacity>=9.0.0",
    "backoff>=2.0.0",
    "ruff>=0.11.5",
    "psycopg[binary, pool]>=3",
    "testcontainers[postgres,redis]>=4.12.0",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "src/pyddd",
]


[tool.mypy]
no_implicit_optional = false
exclude = [
    '^tests/*',
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "function"
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["src/pyddd"]
